--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Github Explorer</title>
 </head>
 <body>
-    
+    <!-- toda aplicação react é desenvolvida entro da div root -->
+    <div id="root"></div>
+
+    <script src="../dist/bundle.js"></script>
 </body>
 </html>
